# Chouseisan-MCP

./: .env.example  README.md  chouseisan_client.py  mcp_server.py  pyproject.toml
src/: main.py
src/chouseisan/: client.py
tests/: test_client.py
