[project]
name = "chouseisan-mcp"
version = "1.1.1"
description = "調整さん のイベント作成 管理を行う MCP サーバー"
authors = [
    { name = "Marumasa" }
]
dependencies = [
    "mcp",
    "playwright>=1.40.0",
    "uvicorn",
    "python-dotenv",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
